fix item spacing a bit more like mvp

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,13 @@
   overflow: auto;
 
 }
-.container {
+.login-container {
   height: 100vh;
+  width: 100%;
+}
+
+.item-container {
+  height: 250px;
   width: 100%;
 }
 
